make normal structure for auth_service

--- a/auth_service/Makefile
+++ b/auth_service/Makefile
@@ -1,12 +1,12 @@
 build:
-	go build -o ./build/app ./cmd/main/app.go 
+	go build -o ./build/app ./cmd/api_auth/app.go 
 
 start:
 	./build/app
 
 dev:
-	go build -o ./build/app ./cmd/main/app.go 
+	go build -o ./build/app ./cmd/api_auth/app.go 
 	./build/app
 
 run:
-	go run ./cmd/main/app.go 
+	go run ./cmd/api_auth/app.go 
