--- a/auth_service/.env.example
+++ b/auth_service/.env.example
@@ -1,1 +1,9 @@
 JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+
+PORT=":50051"
+
+DB_HOST="localhost"
+DB_USER="user"
+DB_NAME="gostat_auth_service"
+DB_PASSWORD="password"
+DB_SSLMODE="disable"
