added a new microservice ( stats_service )

--- a/api_service/.env.example
+++ b/api_service/.env.example
@@ -1,3 +1,6 @@
 PORT=":8080"
-AUTH_HOST="localhost:50051"
+
 JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+
+AUTH_HOST="localhost:50051"
+STATS_HOST="localhost:50050"
