add docker and docker-compose

--- a/api_service/.env.example
+++ b/api_service/.env.example
@@ -2,5 +2,5 @@ PORT=":8080"
 
 JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 
-AUTH_HOST="localhost:50051"
-STATS_HOST="localhost:50050"
+AUTH_HOST="auth_service:50051"
+STATS_HOST="stats_service:50050"
