--- a/stats_service/.env.example
+++ b/stats_service/.env.example
@@ -1,7 +1,7 @@
 PORT=":50050"
 
-DB_HOST="localhost"
-DB_USER="user"
+DB_HOST="db"
+DB_USER="author"
 DB_NAME="gostat_stats_service"
 DB_PASSWORD="password"
 DB_SSLMODE="disable"
