--- a/api_service/.env.example
+++ b/api_service/.env.example
@@ -4,3 +4,6 @@ JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 
 AUTH_HOST="auth_service:50051"
 STATS_HOST="stats_service:50050"
+APP_HOST="app_service:50052"
+
+GIN_MODE=release
