--- a/app_service/.env.example
+++ b/app_service/.env.example
@@ -1,7 +1,7 @@
 PORT=":50052"
 
-DB_HOST="localhost"
+DB_HOST="db"
 DB_USER="author"
 DB_NAME="gostat_app_service"
-DB_PASSWORD="123456789"
+DB_PASSWORD="password"
 DB_SSL_MODE="disable"
