add generation of proto files to docker

--- a/stats_service/Dockerfile
+++ b/stats_service/Dockerfile
@@ -1,17 +1,18 @@
 FROM golang:alpine AS builder
 
-LABEL stage=gobuilder
-
-ENV CGO_ENABLED 0
-
-RUN apk update --no-cache && apk add --no-cache tzdata
+RUN apk update --no-cache && apk add --no-cache tzdata protobuf
 
 WORKDIR /build
-
-ADD go.mod .
-ADD go.sum .
+COPY go.mod .
+COPY go.sum .
 RUN go mod download
+
 COPY . .
+
+RUN unset GOBIN && go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
+RUN unset GOBIN && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
+
+RUN protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/stats/stats.proto
 RUN go build -ldflags="-s -w" -o /app/app cmd/api_stats/app.go
 
 
