--- a/auth_service/Dockerfile
+++ b/auth_service/Dockerfile
@@ -1,19 +1,21 @@
 FROM golang:alpine AS builder
 
-LABEL stage=gobuilder
+RUN apk update --no-cache && apk add --no-cache tzdata protobuf
 
-ENV CGO_ENABLED 0
-
-RUN apk update --no-cache && apk add --no-cache tzdata
 
 WORKDIR /build
-
-ADD go.mod .
-ADD go.sum .
+COPY go.mod .
+COPY go.sum .
 RUN go mod download
-COPY . .
-RUN go build -ldflags="-s -w" -o /app/app cmd/api_auth/app.go
 
+COPY . .
+
+RUN unset GOBIN && go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
+RUN unset GOBIN && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
+
+RUN protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth/auth.proto
+
+RUN go build -ldflags="-s -w" -o /app/app cmd/api_auth/app.go
 
 FROM scratch
 
