--- a/mail_service/Dockerfile
+++ b/mail_service/Dockerfile
@@ -13,9 +13,9 @@ COPY . .
 RUN unset GOBIN && go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
 RUN unset GOBIN && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
 
-RUN protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth/service.proto
+RUN protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/mail/service.proto
 
-RUN go build -ldflags="-s -w" -o /app/app cmd/api_auth/app.go
+RUN go build -ldflags="-s -w" -o /app/app cmd/mail/app.go
 
 FROM scratch
 
