--- a/api_service/Makefile
+++ b/api_service/Makefile
@@ -1,12 +1,18 @@
+swag:
+	swag init --generalInfo ./cmd/server/app.go --output ./docs
+
 build:
-	go build -o ./build/app ./cmd/server/app.go 
+	make swag
+	go build -o ./build/app ./cmd/server/app.go
 
 start:
 	./build/app
 
 dev:
-	go build -o ./build/app ./cmd/server/app.go 
+	make swag
+	go build -o ./build/app ./cmd/server/app.go
 	./build/app
 
 run:
-	go run ./cmd/server/app.go 
+	make swag
+	go run ./cmd/server/app.go
