add an access and refresh tokens

--- a/auth_service/.env.example
+++ b/auth_service/.env.example
@@ -1,4 +1,5 @@
 JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+REFRESH_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 
 PORT=":50051"
 
