--- a/config/.env.prod
+++ b/config/.env.prod
@@ -1,5 +1,6 @@
-# replace jwt token 
-JWT_SECRET=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+# replace jwt and refresh tokens 
+JWT_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+REFRESH_SECRET="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 
 # replace credentials with your own to send messages correctly
 MAIL_LOGIN=login@gmail.com
