--- a/config/.env.prod
+++ b/config/.env.prod
@@ -25,9 +25,9 @@ DB_USER=author
 DB_PASSWORD=password
 DB_SSLMODE=disable
 
-AUTH_DB_NAME=gostat_auth_service
-STAT_DB_NAME=gostat_stats_service
-APP_DB_NAME=gostat_app_service
+AUTH_DB_NAME=auth_service
+STAT_DB_NAME=stats_service
+APP_DB_NAME=app_service
 
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
