--- a/client_service/package.json
+++ b/client_service/package.json
@@ -16,10 +16,10 @@
     "axios": "^1.5.0",
     "d3": "^7.8.5",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^13.5.6",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.2.2"
   }
 }
