fix env for kafka

--- a/config/.env.prod
+++ b/config/.env.prod
@@ -12,6 +12,8 @@ NEXT_PUBLIC_BACKEND_HOST=https://gostat.app
 
 API_SERVICE_PORT=:8080
 
+KAFKA_HOST=kafka:9092
+
 STATS_HOST=stats_service:50050
 AUTH_HOST=auth_service:50051
 APP_HOST=app_service:50052
