--- a/stats_service/.env.example
+++ b/stats_service/.env.example
@@ -6,4 +6,6 @@ DB_NAME="gostat_stats_service"
 DB_PASSWORD="password"
 DB_SSLMODE="disable"
 
+KAFKA_HOST=kafka:9092
+
 IP_DATABASE_PATH="../IP_DATABASE"
