rewrite endpoint PATCH::/stats/visit/{session} and POST::/stats/set/visit/{app}

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
     build: ./mail_service
     environment:
       - MAIL_LOGIN=${MAIL_LOGIN}
+      - KAFKA_HOST=${KAFKA_HOST}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - MAIL_SMTP=${MAIL_SMTP}
       - MAIL_HOST=${MAIL_HOST}
