add stat script for sites in api_service

--- a/api_service/Dockerfile
+++ b/api_service/Dockerfile
@@ -9,6 +9,7 @@ RUN go mod download
 
 COPY . .
 COPY docs .
+COPY front .
 
 RUN unset GOBIN && go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
 RUN unset GOBIN && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
@@ -28,6 +29,7 @@ ENV TZ Asia/Shanghai
 WORKDIR /app
 COPY --from=builder /app/app /app/app
 COPY --from=builder /build/docs /app/docs
+COPY --from=builder /build/front /app/front
 COPY ./wait-for-it.sh /app/wait-for-it.sh
 RUN chmod +x /app/wait-for-it.sh
 
