--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       - APP_HOST=${APP_HOST}
       - GIN_MODE=${GIN_MODE}
       - JWT_SECRET=${JWT_SECRET}
+      - DOMAIN=${DOMAIN}
+      - COOKIE_HTTPS=${COOKIE_HTTPS}
     restart: on-failure
 
   auth_service:
