--- a/client_service/package.json
+++ b/client_service/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "axios": "^1.6.0",
+    "classnames": "^2.3.2",
     "d3": "^7.8.5",
     "eslint": "8.52.0",
     "eslint-config-next": "^14.0.0",
