--- a/client_service/package.json
+++ b/client_service/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/d3": "^7.4.2",
-    "@types/node": "20.8.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "axios": "^1.6.0",
+    "@types/d3": "^7.4.3",
+    "@types/node": "20.9.4",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
-    "eslint": "8.52.0",
-    "eslint-config-next": "^14.0.0",
-    "next": "^14.0.0",
+    "eslint": "8.54.0",
+    "eslint-config-next": "^14.0.3",
+    "i18next": "^23.7.6",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.3.2"
   }
 }
