--- a/client_service/package.json
+++ b/client_service/package.json
@@ -19,9 +19,13 @@
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
     "i18next": "^23.7.6",
+    "js-cookie": "^3.0.5",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "5.3.2"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6"
   }
 }
