--- a/client_service/package.json
+++ b/client_service/package.json
@@ -19,10 +19,12 @@
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
     "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "js-cookie": "^3.0.5",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "typescript": "5.3.2"
   },
   "devDependencies": {
