--- a/client_service/package.json
+++ b/client_service/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@types/d3": "^7.4.3",
-    "@types/node": "20.9.4",
-    "@types/react": "18.2.38",
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
