--- a/client_service/package.json
+++ b/client_service/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/d3": "^7.4.3",
     "@types/node": "20.10.1",
     "@types/react": "18.2.39",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
+    "react-redux": "^8.1.3",
     "typescript": "5.3.2"
   },
   "devDependencies": {
