--- a/client_service/package.json
+++ b/client_service/package.json
@@ -10,23 +10,26 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/d3": "^7.4.3",
-    "@types/node": "20.10.1",
-    "@types/react": "18.2.39",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.42",
     "@types/react-dom": "18.2.17",
+    "@zag-js/react": "^0.31.1",
+    "@zag-js/toast": "^0.31.1",
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "d3": "^7.8.5",
-    "eslint": "8.54.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint": "8.55.0",
+    "eslint-config-next": "^14.0.4",
     "js-cookie": "^3.0.5",
-    "next": "^14.0.3",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
-    "react-redux": "^8.1.3",
-    "typescript": "5.3.2"
+    "react-redux": "^9.0.2",
+    "typescript": "5.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6"
