--- a/client_service/package.json
+++ b/client_service/package.json
@@ -22,6 +22,8 @@
     "d3": "^7.8.5",
     "eslint": "8.55.0",
     "eslint-config-next": "^14.0.4",
+    "highcharts": "^11.2.0",
+    "highcharts-react-official": "^3.2.1",
     "js-cookie": "^3.0.5",
     "next": "^14.0.4",
     "react": "^18.2.0",
